--- a/config/src/main/resources/configurations/gateway.yml
+++ b/config/src/main/resources/configurations/gateway.yml
@@ -11,5 +11,20 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}
 
 spring:
-  config:
-    import: optional:configserver:http://localhost:8888
+  application:
+    name: gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: users
+          uri: http://localhost:7001
+          predicates:
+            - Path=/api/v1/users/**, /api/v1/auth/**
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
