--- a/config/src/main/resources/configurations/discovery.yml
+++ b/config/src/main/resources/configurations/discovery.yml
@@ -1,5 +1,5 @@
 server:
-  port: 7777
+  port: 8761
 
 eureka:
   instance:
@@ -8,7 +8,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 spring:
   config:
